--- a/package.json
+++ b/package.json
@@ -26,14 +26,19 @@
     "@cloudant/cloudant": "^4.1.0",
     "angular-font-awesome": "^3.1.2",
     "angular-material": "^1.1.19",
+    "cat-names": "^3.0.0",
     "ejs": "^2.6.2",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "method-override": "^3.0.0",
     "mongodb": "^3.2.7",
     "morgan": "^1.9.1",
+    "ng2-parallaxscroll": "^2.2.0",
+    "ngx-lightbox": "^2.0.0",
     "ngx-loading": "^3.0.1",
     "nodemon": "^1.19.1",
+    "request": "^2.88.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
