--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "start-server": "nodemon ./server/"
+    "start-server": "nodemon ./server/",
+    "start-client": "ng build --watch"
   },
   "private": true,
   "dependencies": {
